# topics-insights

./: .gitignore  README.md  SESSION_LOG.md  agents.md  instructions.md  instructions.txt
backend/: .coverage  .env.example  README.md  pyproject.toml  requirements.txt
backend/scripts/: generate_requirements.sh  setup_supabase.py
backend/src/services/: database.py
backend/src/services/supabase/: client.py
backend/src/topic_insights/: main.py
backend/src/topic_insights/agents/: README.md  base.py  openai_agent.py
backend/src/topic_insights/examples/: analyze_topic.py
backend/tests/: test_health.py
backend/tests/agents/: test_openai_agent.py
frontend/: .babelrc  .gitignore  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @babel.js  @chakra-ui.js  @emotion.js  @swc.js  @tanstack.js  asynckit.js  axios.js  call-bind-apply-helpers.js  color2k.js  combined-stream.js  debug.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  follow-redirects.js  form-data.js  framer-motion.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  hoist-non-react-statics.js  lodash.mergewith.js  math-intrinsics.js  mime-db.js  mime-types.js  ms.js  next.js  proxy-from-env.js  react-fast-compare.js  react-is.js  stylis.js  supports-color.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/__tests__/: page.test.tsx
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/lcov-report/src/: App.tsx.html  index.html  index.tsx.html
frontend/coverage/lcov-report/src/app/: index.html  layout.tsx.html  page.tsx.html  providers.tsx.html
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
src/topic_insights/agents/: base.py
